--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -6,8 +6,7 @@ $color1: #7F99F8;
 
 body {
     font-family: sans-serif;
-    background-color: #626AAC;
-    height: 400vh;
+    background-color: #C2CCF1;
     display: flex;
     flex-flow: column;
 }
@@ -55,7 +54,6 @@ header {
     justify-self: center;
     justify-content: center;
     align-content: center;
-    margin-top: 35vh;
     width: 50%;
     display: flex;
     flex-flow: column;
@@ -172,11 +170,6 @@ header {
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.05);
 }
 
-.background-image {
-    position: absolute;
-    z-index: -30;
-}
-
 //end header
 
 //About
@@ -281,7 +274,7 @@ header {
         margin-top: 2vh;
         p {
             width: 100%;
-            margin-bottom: 3vh;
+            margin-bottom: 5vh;
             margin-top: 2vh;
             font-size: 24px;
         }
@@ -303,7 +296,7 @@ header {
     }
     
     .top {
-        margin-top: 4vh;
+        margin-top: 8vh;
     }
     
     h2 {
@@ -329,7 +322,7 @@ header {
 }
 
 .blog--line {
-    margin-top: 5%;
+    margin-top: 2vh;
     outline: none;
     border: none;
     height: 1px;
@@ -337,7 +330,7 @@ header {
 }
 
 .blog--link {
-    font-size: 24px;
+    font-size: 20px;
     color: white;
     padding: 1% 4% 1% 4%;
     border-radius: 5px;
@@ -377,14 +370,15 @@ header {
     margin-top: 10vh;
 }
 
+.stats {
+    width: auto;
+    margin-top: 2vh;
+}
+
 //footer
 
 footer {
-    margin-top: 10vh;
+    height: 55vh;
+    margin-top: 20vh;
     background-color: #C2CCF1;
-}
-
-.info {
-    margin-top: 5vh;
-    margin-left: 7.5%;
 }
